# KokkosToPytorch

./: CMakeLists.txt  README.md  launch.py
include/: py_simple.py  py_simplenn.py
src/: FirstNN.cpp  FirstNN.h  main.cpp  test_kokkos.cpp
